finish CustomMap implementation

--- a/maps/index.html
+++ b/maps/index.html
@@ -2,7 +2,7 @@
   <body>
     <div id="map" style="height: 100%;" ></div>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXwRNFksnxRXxiGVTLeQGaWOyJ7qJzH8M&libraries=marker&v=weekly&callback=Function.prototype"
+      src="https://maps.googleapis.com/maps/api/js?key=<key>&libraries=marker&v=weekly&callback=Function.prototype"
       async
       defer
     ></script>
